Fix inline-edit style padding values to disallow bleeding

--- a/src/components/ids-data-grid/ids-data-grid.scss
+++ b/src/components/ids-data-grid/ids-data-grid.scss
@@ -156,7 +156,6 @@
     .text-ellipsis {
       // No Ellipsis on tree columns, let links be focusable
       overflow: initial;
-      padding-inline-start: 0;
 
       ids-hyperlink {
         margin-inline-start: 0;
